--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 DB_NAME=data_factory
 
-# DeepSeek API配置
-DEEPSEEK_API_KEY=sk-0c98c2a93954490aab152eeec9da1601
+# DeepSeek API配置(需配置密钥)
+DEEPSEEK_API_KEY=''
 
 # 服务器配置
 SERVER_HOST=0.0.0.0
