--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ MONGO_HOST=localhost
 MONGO_PORT=27017
 DB_NAME=data_factory
 
-# DeepSeek API配置(需配置密钥)
+# DeepSeek API配置
 DEEPSEEK_API_KEY=''
 
 # 服务器配置
