--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@ DB_NAME=data_factory
 # DeepSeek API配置
 DEEPSEEK_API_KEY=''
 
+# Ollama本地大模型配置
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=deepseek-r1:8b
+
 # 服务器配置
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8001
